--- a/EmpowerDemo2_1/EmpowerDemo2_1.csproj
+++ b/EmpowerDemo2_1/EmpowerDemo2_1.csproj
@@ -49,6 +49,19 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="EmpowerDemo2_1.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Skyline.DataMiner.Core.DataMinerSystem.Automation">
+      <Version>1.1.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="Skyline.DataMiner.Dev.Automation">
+      <Version>10.3.3.1</Version>
+    </PackageReference>
+    <PackageReference Include="StyleCop.Analyzers">
+      <Version>1.1.118</Version>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
