Test Deploy using Version 4 of the room library

--- a/EmpowerDemo2_1/EmpowerDemo2_1.csproj
+++ b/EmpowerDemo2_1/EmpowerDemo2_1.csproj
@@ -56,8 +56,8 @@
     <PackageReference Include="Skyline.DataMiner.Dev.Automation">
       <Version>10.3.3.1</Version>
     </PackageReference>
-    <PackageReference Include="Skyline.DataMiner.Empower.Library.RoomTest">
-      <Version>1.0.3</Version>
+    <PackageReference Include="Skyline.DataMiner.Empower.Library.Room1">
+      <Version>1.0.4</Version>
     </PackageReference>
     <PackageReference Include="StyleCop.Analyzers">
       <Version>1.1.118</Version>
